--- a/typing-game.cabal
+++ b/typing-game.cabal
@@ -30,5 +30,7 @@ executable typing-game
     , ghcid
     , lens
     , mtl
+    , random
+    , split
     , transformers
   default-language: Haskell2010
