--- a/typing-game.cabal
+++ b/typing-game.cabal
@@ -22,6 +22,7 @@ executable typing-game
   other-modules:
       App
       Args
+      Game
       Parse
       Term
       Paths_typing_game
@@ -36,6 +37,5 @@ executable typing-game
     , optparse-applicative
     , random
     , random-shuffle
-    , split
     , transformers
   default-language: Haskell2010
